<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context="com.example.levanhao.splashapp.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/image_login" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_span="2">

                <EditText
                    android:id="@+id/phoneEdittext"
                    style="@android:style/Widget.Holo.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:background="@drawable/background_edittext"
                    android:drawableLeft="@drawable/phone_login"
                    android:hint="Số điện thoại"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:selectAllOnFocus="false" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/passEdittext"
                    style="@android:style/Widget.Holo.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:background="@drawable/background_edittext"
                    android:drawableLeft="@drawable/lock_login"
                    android:hint="Mật khẩu"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:selectAllOnFocus="false" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_span="2"
                    android:background="@drawable/corner_button"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/corner_button_register"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/red" />

                <Button
                    android:id="@+id/skipButton"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/corner_button_register"
                    android:text="@string/skip"
                    android:textAllCaps="false"
                    android:textColor="@color/red" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quên Mật Khẩu?"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />
    </LinearLayout>

    <include
        layout="@layout/view_loading"
        android:visibility="gone">

    </include>

</RelativeLayout>
